<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_loading_and_retry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@drawable/other_unite_empty" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty_prompt"
            android:textColor="@color/color_9B9FAD"
            android:textSize="@dimen/commonFontSize_16"
            android:textStyle="bold" />

        <!--点击重试-->
        <TextView
            android:id="@+id/tvEmptyRetry"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/other_click_retry"
            android:textColor="@color/color_FFA800"
            android:textSize="@dimen/commonFontSize_12"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
</FrameLayout>
