<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px_100"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/px_36"
    android:paddingEnd="@dimen/px_6">

    <LinearLayout
        android:id="@+id/llCommentAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/px_48"
        android:layout_weight="1"
        android:background="@drawable/bg_f4f4f4_default_comment"
        android:gravity="center_vertical"
        android:minHeight="@dimen/px_66"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mTextCommentAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/comment_edit"
            android:drawablePadding="@dimen/px_18"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/px_30"
            android:paddingEnd="0dp"
            android:text="@string/consult_input_consult_tips"
            android:textColor="@color/color_5E5E5E"
            android:textSize="@dimen/px_26_sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLayoutBottomComment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mImageBottomComment"
            android:layout_width="@dimen/px_36"
            android:layout_height="@dimen/px_36"
            android:contentDescription="@string/comment"
            android:src="@drawable/ic_consult_bottom_message" />

        <TextView
            android:id="@+id/mTextCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_12"
            android:text="@string/share"
            android:textColor="@color/text_color_9F9F9F" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="@dimen/px_100"
        android:layout_height="@dimen/px_100"
        android:layout_marginStart="@dimen/px_6"
        android:contentDescription="@string/share"
        android:padding="@dimen/px_32"
        android:src="@drawable/ic_consult_bottom_share" />
</LinearLayout>