<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clItemThreePic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/px_28"
    android:paddingBottom="@dimen/px_12">

    <!--资讯描述-->
    <com.news.example.myproject.widgets.extra.LineSpaceExtraContainer
        android:id="@+id/lsecTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.news.example.myproject.widgets.extra.LineSpaceExtraCompatTextView
            android:id="@+id/tvInformationDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/px_12"
            android:maxLines="2"
            android:paddingStart="@dimen/px_36"
            android:paddingEnd="@dimen/px_36"
            android:textColor="@color/text_color_2C2C2C"
            android:textSize="@dimen/px_34_sp" />

    </com.news.example.myproject.widgets.extra.LineSpaceExtraContainer>

    <FrameLayout
        android:id="@+id/flImagsContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_36"
        android:layout_marginTop="@dimen/px_22"
        android:layout_marginEnd="@dimen/px_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lsecTitle">

        <LinearLayout
            android:id="@+id/llItemImgs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivInfoPic1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/px_3"
                android:layout_weight="1"
                android:background="@drawable/shape_color_10000000_corner_left_12_stroke"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/ivInfoPic2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/px_3"
                android:layout_marginEnd="@dimen/px_3"
                android:layout_weight="1"
                android:background="@drawable/shape_color_10000000_stroke_1"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/ivInfoPic3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/px_3"
                android:layout_weight="1"
                android:background="@drawable/shape_color_10000000_corner_right_12_stroke"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rlItemBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flImagsContent">

        <FrameLayout
            android:id="@+id/flUserAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/px_12">

            <!--头像-->
            <ImageView
                android:id="@+id/ivUserAvatar0"
                android:layout_width="@dimen/px_32"
                android:layout_height="@dimen/px_32"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/head"
                android:src="@drawable/ic_default_head_circle" />

            <!--头像描边-->
            <ImageView
                android:layout_width="@dimen/px_32"
                android:layout_height="@dimen/px_32"
                android:layout_gravity="center_vertical"
                android:background="@drawable/user_avatar_contour"
                android:contentDescription="@string/head" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvNickOrCreateTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_32"
            android:layout_alignTop="@+id/flUserAvatar"
            android:layout_alignBottom="@+id/flUserAvatar"
            android:layout_toEndOf="@+id/flUserAvatar"
            android:gravity="start|center_vertical"
            android:textColor="@color/text_color_9F9F9F"
            android:textSize="@dimen/px_22_sp" />

        <!--更多-->
        <ImageView
            android:id="@+id/ivContentMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/tvNickOrCreateTime"
            android:layout_alignBottom="@+id/tvNickOrCreateTime"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/more"
            android:paddingStart="@dimen/px_24"
            android:paddingEnd="@dimen/px_36"
            android:src="@drawable/item_more" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>